--- a/src/styles/modal.css
+++ b/src/styles/modal.css
@@ -1,9 +1,20 @@
+:root {
+  --accent-color: #fbbf13;
+  --accent-color-red: #fb1515;
+  --background-black: #141414;
+}
 @font-face {
   font-family: "AbroSans-Bold";
   src: url("../fonts/AbroSans-Bold.ttf") format("truetype");
   font-weight: 700;
 }
-.backdrop {
+@font-face {
+  font-family: "AbroSans-Regular";
+  src: url("../fonts/AbroSans-Regular.ttf") format("truetype");
+  font-weight: 400;
+}
+.backdrop,
+.thank-you-backdrop {
   position: fixed;
   width: 100vw;
   height: 100vh;
@@ -17,11 +28,106 @@
   transform: translateX(100%);
   transition: all 0.3s ease-out;
 }
-.backdrop.is-active {
+.thank-you-backdrop {
+  transform: none;
+}
+.backdrop.is-active,
+.thank-you-backdrop.is-active {
   opacity: 1;
   visibility: visible;
   pointer-events: auto;
   transform: translateX(0);
+}
+.thank-you-backdrop .modal-content-container {
+  width: fit-content;
+  min-height: unset;
+  height: fit-content;
+  transform: translate(calc(-50vw + 50%), calc(50vh - 50%));
+  background-color: transparent;
+  padding: 0;
+}
+.thank-you-backdrop .modal-content-container .success-title,
+.thank-you-backdrop .modal-content-container .error-title {
+  font-family: "AbroSans-Regular";
+  font-size: 36px;
+  line-height: 120%;
+  text-align: center;
+  color: var(--accent-color);
+  margin-bottom: 2px;
+}
+.thank-you-backdrop .modal-content-container .error-title {
+  color: var(--accent-color-red);
+}
+.thank-you-backdrop .modal-content-container .description {
+  text-align: center;
+  margin-bottom: 50px;
+  font-size: 18px;
+}
+.thank-you-backdrop .modal-content-container .ok-btn,
+.thank-you-backdrop .modal-content-container .back-btn {
+  width: 163px;
+  display: block;
+  padding-top: 6px;
+  padding-bottom: 6px;
+  text-align: center;
+  margin-right: auto;
+  margin-left: auto;
+  font-family: "AbroSans-Bold";
+  font-size: 24px;
+  color: var(--accent-color);
+  background-color: transparent;
+  border: 1px solid var(--accent-color);
+  transition: 0.3s ease-out;
+}
+.thank-you-backdrop .modal-content-container .back-btn {
+  color: var(--accent-color-red);
+  border: 1px solid var(--accent-color-red);
+}
+.thank-you-backdrop .modal-content-container .ok-btn:hover {
+  background-color: var(--accent-color);
+  color: var(--background-black);
+}
+.thank-you-backdrop .modal-content-container .back-btn:hover {
+  background-color: var(--accent-color-red);
+  color: var(--background-black);
+}
+@media screen and (min-width: 1200px) {
+  .thank-you-backdrop .modal-content-container .success-title,
+  .thank-you-backdrop .modal-content-container .error-title {
+    font-size: min(60px, 7vh);
+  }
+  .thank-you-backdrop .modal-content-container .description {
+    font-size: 24px;
+  }
+}
+@media screen and (min-width: 1920px) {
+  .thank-you-backdrop .modal-content-container .success-title,
+  .thank-you-backdrop .modal-content-container .error-title {
+    font-size: 100px;
+    margin-bottom: 20px;
+  }
+  .thank-you-backdrop .modal-content-container .ok-btn,
+  .thank-you-backdrop .modal-content-container .back-btn {
+    height: auto;
+    font-size: 36px;
+  }
+  .thank-you-backdrop .modal-content-container .description {
+    font-size: 36px;
+    margin-bottom: 80px;
+  }
+}
+.thank-you-backdrop .modal-content-container .spinner-wrapper svg {
+  height: 20vh;
+  width: 20vh;
+}
+@media screen and (min-width: 320px) and (max-width: 1199px) {
+  .thank-you-backdrop .modal-content-container .spinner-wrapper svg {
+    width: 30vw;
+    height: 30vw;
+  }
+  .thank-you-backdrop .modal-content-container {
+    transform: translate(calc(50vw - 50%), calc(50vh - 50%));
+  }
 }
 .toolbar-container {
   width: 100vw;
@@ -54,17 +160,17 @@
   transition: all 0.3s ease-out;
 }
 .modal-link-list .modal-link-item:hover .modal-link {
-  color: #fbbf13;
+  color: var(--accent-color);
   cursor: pointer;
 }
 .modal-link-list .modal-link-item .modal-link.red {
-  color: #fb1515;
+  color: var(--accent-color-red);
 }
 .close-modal-icon * {
   transition: 0.3s ease-out;
 }
 .close-modal-btn:hover .close-modal-icon * {
-  fill: #fb1515;
+  fill: var(--accent-color-red);
 }
 @media screen and (min-width: 768px) {
   .modal-link-list .modal-link-item .modal-link {
@@ -80,7 +186,7 @@
     padding-top: 20px;
     padding-right: 20px;
     overflow-y: hidden;
-    background-color: black;
+    background-color: var(--background-black);
   }
   .toolbar-container {
     width: 100%;
