--- a/src/styles/partials/hero-section/_hero-btn.scss
+++ b/src/styles/partials/hero-section/_hero-btn.scss
@@ -1,24 +1,7 @@
-@keyframes spin {
-  100% {
-  }
-}
-
 .hero-section {
   .hero-btn {
     @media screen and(min-width: $mobile) {
-      width: 200px;
-      height: 200px;
-      border-radius: 50%;
-      background-color: transparent;
-      border: 2px dashed white;
-      margin-left: auto;
-      margin-right: auto;
-      transition-property: border;
-      transition-duration: 5s;
-      transition-timing-function: linear;
-      &:hover {
-        transform: rotate(360deg);
-      }
+      @include standartBtnCircle(200px, 200px, transparent);
       p {
         @include standartDescription(24px, 120%);
       }
