--- a/src/styles/partials/section-step-by-step/_step-list-container.scss
+++ b/src/styles/partials/section-step-by-step/_step-list-container.scss
@@ -106,6 +106,7 @@
             display: block;
             height: 100%;
             p {
+              max-width: 92%;
               font-size: 18px;
             }
           }
@@ -143,6 +144,7 @@
             font-size: 30px;
           }
           .item-descr-container p {
+            max-width: 100%;
             font-size: 24px;
           }
         }
