final fixes, swiper embed

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -12,3 +12,4 @@
 @import "./partials/section-customers-say/index";
 @import "./partials/section-contact-form/index";
 @import "./partials/footer/index";
+@import "./partials/modal/index";
