--- a/src/styles/partials/section-support-ua/_btn.scss
+++ b/src/styles/partials/section-support-ua/_btn.scss
@@ -1,4 +1,8 @@
 .section-support-ua {
+  a {
+    display: flex;
+    align-items: center;
+  }
   .btn {
     @media screen and(min-width: $mobile) {
       @include standartBtnCircle(200px, 200px, transparent);
