--- a/src/styles/partials/app-bar/_get-consult.scss
+++ b/src/styles/partials/app-bar/_get-consult.scss
@@ -13,6 +13,9 @@
           line-height: 120%;
           font-weight: 700;
           color: $blackContent;
+          &:hover {
+            cursor: pointer;
+          }
         }
       }
     }
