--- a/src/styles/partials/footer/_index.scss
+++ b/src/styles/partials/footer/_index.scss
@@ -15,6 +15,11 @@
     }
   }
   @media screen and(min-width: $desktop) {
+    position: absolute;
+    width: 100%;
+    height: 10vh;
+    bottom: 0%;
+    left: 0;
     .container {
       position: absolute;
       bottom: 0;
