--- a/src/styles/partials/section-contact-form/_title.scss
+++ b/src/styles/partials/section-contact-form/_title.scss
@@ -9,9 +9,10 @@
     }
     @media screen and(min-width: $desktop) {
       min-width: 100%;
-      margin-bottom: 40px;
+      margin-bottom: 0;
+      height: fit-content;
       .title {
-        font-size: min(60px, 7vh);
+        font-size: 60px;
       }
     }
     @media screen and(min-width: $fullHD) {
